
Modul: Digital Asset Management
- Die Benutzerdefinierte Sortierung funktioniert.
- Kategorien können keinen Unterkategorien zugeordnet werden.
- Die Einstellungen können nur mit Verwaltungsrechten modifiziert werden.
- XHTML validierte Ausgabe.

Modul: Dokumenten System
- Kompatibel mit der Alias Verwaltung.

Modul: Forum
- Die Statistik wird von Suchmaschinen nicht beeinflusst.

Modul: Gästebuch
- Der Inhalt des Benachrichtigung-E-Mails wird korrekt dargestellt.

Modul: Kalender
- Die Kategorienauswahl wird bei der Suche berücksichtigt.

Modul: Kleinanzeigemarkt
- Die Suche nach Anzeigen im Backend funktioniert.

Modul: Newsletter
- Die Anmeldung und Bearbeitung des Profils funktioniert korrekt.

Modul: Linkverzeichnis
- Die Statistik wird von Suchmaschinen nicht beeinflusst.
- Es werden keine leeren Einträge aufgelistet.

Modul: Shop
- E-Mail Vorlagen vom Typ Systemvorlage sind nicht Löschbar.
- Bei der Bestellung eines Produktes vom Typ "Mitgliedschaft" wird das
  Benutzerkonto mit der entsprechend definierten Gültigkeitsdauer erstellt.
- Beim Versand der Bestellbestätigung per E-Mail wird, falls die benötigte
  E-Mail Vorlage in der ausgewählten Sprache nicht vorhanden ist, die, in der
  Standardsprache erfassten E-Mail Vorlage verwendet. Falls auch letztere nicht
  vorhanden ist, wird die nächste vorhandene Sprache verwendet.
- Bei einer Bestellung wird das Land der Lieferadresse gespeichert.

Modul: User to User Nachrichten
- Die E-Mail Benachrichtigungen über neue Nachrichten werden versendet.
- Der Platzhalter [senderName] in der E-Mail-Benachrichtigung wird ersetzt

Modul: Wissensdatenbank
- Verbesserte Live-Suche.

Statistik
- Die Zählung der Besucher erfolgt korrekt.
- Beim Bereich 'Beliebteste Seiten' werden Seitenaufrufe, welche unter
  Verwendung eines Alias getätigt wurden, korrekt aufgelistet.

Webinstaller
- Kontrollkästchen werden beim Browser Opera angezeigt.

****************************************
* Neue Module **************************